--- a/WSA_TouchHelper/App.config
+++ b/WSA_TouchHelper/App.config
@@ -1,6 +1,51 @@
 <?xml version="1.0" encoding="utf-8"?>
 <configuration>
+    <configSections>
+        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="WSA_TouchHelper.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+        </sectionGroup>
+    </configSections>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8"/>
     </startup>
+    <userSettings>
+        <WSA_TouchHelper.Properties.Settings>
+            <setting name="X1" serializeAs="String">
+                <value>0</value>
+            </setting>
+            <setting name="X2" serializeAs="String">
+                <value>0</value>
+            </setting>
+            <setting name="X3" serializeAs="String">
+                <value>0</value>
+            </setting>
+            <setting name="X4" serializeAs="String">
+                <value>0</value>
+            </setting>
+            <setting name="X5" serializeAs="String">
+                <value>0</value>
+            </setting>
+            <setting name="X6" serializeAs="String">
+                <value>0</value>
+            </setting>
+            <setting name="Y1" serializeAs="String">
+                <value>0</value>
+            </setting>
+            <setting name="Y2" serializeAs="String">
+                <value>0</value>
+            </setting>
+            <setting name="Y3" serializeAs="String">
+                <value>0</value>
+            </setting>
+            <setting name="Y4" serializeAs="String">
+                <value>0</value>
+            </setting>
+            <setting name="Y5" serializeAs="String">
+                <value>0</value>
+            </setting>
+            <setting name="Y6" serializeAs="String">
+                <value>0</value>
+            </setting>
+        </WSA_TouchHelper.Properties.Settings>
+    </userSettings>
 </configuration>
