More hotkeys alike PC Pass turn,inv,map..

--- a/WSA_TouchHelper/App.config
+++ b/WSA_TouchHelper/App.config
@@ -28,6 +28,15 @@
             <setting name="X6" serializeAs="String">
                 <value>0</value>
             </setting>
+            <setting name="X7" serializeAs="String">
+                <value>0</value>
+            </setting>
+            <setting name="X8" serializeAs="String">
+                <value>0</value>
+            </setting>
+            <setting name="X9" serializeAs="String">
+                <value>0</value>
+            </setting>
             <setting name="Y1" serializeAs="String">
                 <value>0</value>
             </setting>
@@ -44,6 +53,15 @@
                 <value>0</value>
             </setting>
             <setting name="Y6" serializeAs="String">
+                <value>0</value>
+            </setting>
+            <setting name="Y7" serializeAs="String">
+                <value>0</value>
+            </setting>
+            <setting name="Y8" serializeAs="String">
+                <value>0</value>
+            </setting>
+            <setting name="Y9" serializeAs="String">
                 <value>0</value>
             </setting>
         </WSA_TouchHelper.Properties.Settings>
