Added mount,chat open,chat send (need fixes but stable)

--- a/WSA_TouchHelper/App.config
+++ b/WSA_TouchHelper/App.config
@@ -64,6 +64,24 @@
             <setting name="Y9" serializeAs="String">
                 <value>0</value>
             </setting>
+            <setting name="X10" serializeAs="String">
+                <value>0</value>
+            </setting>
+            <setting name="Y10" serializeAs="String">
+                <value>0</value>
+            </setting>
+            <setting name="X11" serializeAs="String">
+                <value>0</value>
+            </setting>
+            <setting name="X12" serializeAs="String">
+                <value>0</value>
+            </setting>
+            <setting name="Y11" serializeAs="String">
+                <value>0</value>
+            </setting>
+            <setting name="Y12" serializeAs="String">
+                <value>0</value>
+            </setting>
         </WSA_TouchHelper.Properties.Settings>
     </userSettings>
 </configuration>
