Added placeholder for Character/Kolizeum..

--- a/WSA_TouchHelper/App.config
+++ b/WSA_TouchHelper/App.config
@@ -94,6 +94,12 @@
             <setting name="Y14" serializeAs="String">
                 <value>0</value>
             </setting>
+            <setting name="X15" serializeAs="String">
+                <value>0</value>
+            </setting>
+            <setting name="Y15" serializeAs="String">
+                <value>0</value>
+            </setting>
         </WSA_TouchHelper.Properties.Settings>
     </userSettings>
   <runtime>
