--- a/WSA_TouchHelper/Properties/Settings.settings
+++ b/WSA_TouchHelper/Properties/Settings.settings
@@ -86,5 +86,11 @@
     <Setting Name="Y14" Type="System.Int32" Scope="User">
       <Value Profile="(Default)">0</Value>
     </Setting>
+    <Setting Name="X15" Type="System.Int32" Scope="User">
+      <Value Profile="(Default)">0</Value>
+    </Setting>
+    <Setting Name="Y15" Type="System.Int32" Scope="User">
+      <Value Profile="(Default)">0</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
